namespace/glance/glance/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  namespace: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      runtimeClassName: youki
      automountServiceAccountToken: false
      containers:
        - name: glance
          image: docker.io/glanceapp/glance:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          volumeMounts:
            - name: glance-config
              mountPath: /app/config
              readOnly: true
      volumes:
        - name: glance-config
          configMap:
            name: glance-config
            items:
              - key: glance.yml
                path: glance.yml
