namespace/glance/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
spec:
  selector:
    app: glance
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: glance
  type: ClusterIP
