namespace/glance/glance/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-https
  namespace: glance
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`glance.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
      services:
        - name: glance
          port: 80
  tls: 
    secretName: oglesby-io-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: glance-http
  namespace: glance
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`glance.oglesby.io`)
      kind: Rule
      middlewares:
        - name: internal-whitelist
          namespace: traefik
        - name: redirect-https
          namespace: traefik
      services:
        - name: glance
          port: 80
